# aws-lambda-basic-auth

./: .gitignore  pyproject.toml
.circleci/: config.yml
app/: authorizer.py  webhook.py
terraform/: api-gateway-authorizer.tf  authorizer_lambda.tf  main.tf  ssm.tf  webhook-api-gateway.tf  webhook_lambda.tf
tests/unit/webhook/: fixtures.py  webhook_test.py
