[tool.poetry]
name = "aws-lambda-basic-auth"
version = "0.1.0"
description = ""
authors = ["Andre Oliveira <dev.andrelara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
